<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Teleport Track</string>
    <string name="hello_world">Hello world!</string>

    <string name="mapskey">YOUR API KEY</string>
    
    <!-- Menu -->
    <string name="menu_about">About us</string>
    <string name="menu_logout">Logout</string>
    <string name="menu_update_page">Reload Page</string>
    <string name="menu_exit">Exit</string>

    <!-- Label -->
    <string name="loading">Loading&#8230;</string>
    <string name="title_activity_main">Teleport Track</string>
    <string name="Button_ok">Save</string>
    <string name="Button_cancel">Cancel</string>
    <string name="text_track_your_delivery_1">Create inquiry, track current status and view history of your orders.</string>
    <string name="text_track_your_delivery_attention">Attention! Tracking application is possible only if the delivery takes place through the service Teleport Delivery Service.</string>
    <string name="text_track_your_delivery_past_ID">Enter ID code of inquiry and click track.</string>
    <string name="text_track_ID">Inquiry ID:</string>
    <string name="text_track_button">Track</string>
    <string name="text_teleportds">www.teleport-ds.com</string>
    <string name="inquiryidhint">E.g.: 3334444224444</string>

    <!-- Address format -->
    <string name="address_output_string">%1$s %2$s %3$s</string>

    <!-- Latitude, longitude format -->
    <string name="latitude_longitude">%1$.8f, %2$.8f</string>

    <!-- Error or Warning Label -->
    <string name="connection_error">Unable to load data. Check your network connection.</string>
    
    <string name="action_settings">Settings</string>
    
    
         <!-- Track Activity -->
    <string name="title_activity_track">Track inquiry</string>
    <string name="DeliveryStatus">Delivery Status:</string>
    <string name="AutoStatus">System Status:</string>
    <string name="Status">loading...</string>
    <string name="Time">Time:</string>
    <string name="please_wait">Please wait. Receiving information about your inquiry</string>
    <string name="please_wait_create_inq">Please wait. Inquiry is creating.</string>
    <string name="yourorderid">Your order ID:</string>
    <string name="orderid">...order ID...</string>
    <string name="enterid">please enter inquiry ID</string>
    <string name="Youcourierpos">You courier on the map:</string>
    
     <!-- Create Activity -->
    <string name="title_activity_create">Create your inquiry</string>
    <string name="с_sender">Sender*</string>
    <string name="с_sender_adress">Sender address*</string>
    <string name="с_sender_phone">Sender phone*</string>
    <string name="с_weight">Parcel weight*</string>
    <string name="с_razmer">Parcel dimensions</string>
    <string name="dimension_height">dimension_height</string>
    <string name="dimension_width">dimension_width</string>
    <string name="dimension_length">dimension_length</string>
    <string name="с_receiver_adress">Receiver address*</string>
    <string name="с_receiver">Receiver*</string>
    <string name="с_receiver_phone">Receiver phone*</string>
    <string name="с_receiver_email">Receiver e-mail</string>
    <string name="с_sender_email">Sender e-mail*</string>
    <string name="с_declarate_walue">Declared value</string>
    <string name="с_info">Additional information</string>
    <string name="с_tarif">Delivery type</string>
    <string name="dont_work">Sorry, this function is not available at the moment.</string>
    <string name="enterfields">Please fill in required fields</string>
    <string name="inquiryok">Ok</string>
    <string name="inquirycancel">Cancel</string>
    <string name="cinquiryid">Inquiry ID</string>
    <string name="cinquirycost">Delivery cost</string>
    <string name="Statuscinquiry">.....</string>
    <string name="senderemailvalidation">Sender e-mail is not valid</string>
    <string name="phonevalidation">Sender or receiver phone is not valid</string>
    <string name="inquiryoktoast">Your inquiry is confirmed</string>
    <string name="inquirycanceltoast">Your inquiry is canceled</string>
    <string name="toastproblems">Inquiry is not created</string>
    <!-- Create Activity HINT-->
    <string name="phone_hint_sender_phone">E.g.: 380971112233</string>
    <string name="phone_hint_receiver_phone">E.g.: 971112233</string>
    <string name="FIO_hint">E.g.: John Smith</string>
    <string name="Adress_hint">E.g.: 10 Evil road</string>
    <string name="mail_hint">E.g.: john@gmail.com</string>
    <string name="veight_hint">E.g.: 1.2</string>
    <string name="declarate_hint">E.g.: 100</string>
    <string name="info_hint">E.g.: Deliver till 10am</string>
    <string name="str_atv_places">Enter Place Here</string>
    
     <!-- History Activity -->
    <string name="title_inquiry_history">Inquiry History</string>
    <string name="text_history_button">History</string>
    <string name="receiving_order_status">Please wait. Receiving information about your inquiry.</string>
    <string name="historyactivityhelp">Information about your inquiries:</string>
    
     <!-- History List -->
    
    <string name="inquiryidfs">Inquiry ID:</string>
	<string name="inquirytimefs">Inquiry Time:</string>
	<string name="inquirycostfs">Inquiry Cost:</string>
	<string name="receiverfiofs">Receiver:</string>
   
    
    <!-- SQL Database-->
    <string name="sqlinquiryid"> ,Inquiry ID: </string>
    <string name="sqlinquirytime"> ,Inquiry Time: </string>
    
    
    <string-array name="gabarit">
    <item>Маленький L30 * W25 * H10 (Вес до 3 кг)</item>
    <item>Маленький L35 * W25 * H25 (Вес до 6 кг)</item>
    <item>Средний L100 * W100 * H7  (Вес до 30 кг)</item>
    <item>Большой L133 * W133 * H133  (Вес до 30 кг)</item>
	</string-array>
	
     <string-array name="deliverytarif">
    <item>Экспресс доставка (Тариф по километражу)</item>
    <item>Обычная доставка (Тариф по килограммам)</item>
	</string-array>
    
    <!-- Start Activity -->
    <string name="title_activity_start">Teleport Track</string>
    <string name="text_create_button">Create</string>
    <string name="text_start_info">Create inquiry, track current status and view history of your orders.</string>
    

</resources>