<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".TrackActivity" >

    <TextView
        android:id="@+id/TextView01"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/TextView03"
        android:layout_below="@+id/textView1"
        android:layout_marginTop="15dp"
        android:text="@string/DeliveryStatus"
        android:textColor="@color/blue" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/TextView03"
        android:layout_below="@+id/TextView03"
        android:layout_marginTop="16dp"
        android:text="@string/AutoStatus"
        android:textColor="@color/blue" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView1"
        android:layout_alignBottom="@+id/textView1"
        android:layout_alignLeft="@+id/TextView04"
        android:text="@string/Status"
        android:visibility="gone" />
    
      <TextView
          android:id="@+id/TextView02"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_alignBaseline="@+id/TextView01"
          android:layout_alignBottom="@+id/TextView01"
          android:layout_alignLeft="@+id/textView2"
          android:text="@string/Status"
          android:visibility="gone" />

      <TextView
          android:id="@+id/TextView04"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_alignBaseline="@+id/TextView03"
          android:layout_alignBottom="@+id/TextView03"
          android:layout_marginLeft="22dp"
          android:layout_toRightOf="@id/textView1"
          android:text="@string/orderid" />

     <ListView
          android:id="@+id/list"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_alignLeft="@+id/textView2"
          android:layout_alignTop="@id/textView1"
           >

      </ListView>

     <TextView
         android:id="@+id/TextView05"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignLeft="@+id/TextView01"
         android:layout_below="@+id/TextView01"
         android:layout_marginTop="12dp"
         android:text="@string/Time"
         android:textColor="@color/blue" />

     <TextView
         android:id="@+id/TextView03"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
         android:layout_alignParentTop="true"
         android:text="@string/yourorderid"
         android:textColor="@color/blue" />
     
     <ProgressBar
         android:id="@+id/progressBar1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/textView1"
         android:layout_toRightOf="@+id/textView1"
         android:paddingLeft="10dp"
         android:visibility="gone" />

     <TextView
         android:id="@+id/TextView06"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignLeft="@+id/TextView05"
         android:layout_below="@+id/TextView05"
         android:layout_marginTop="14dp"
         android:text="@string/Youcourierpos"
         android:textColor="@color/blue"
         android:visibility="gone" />

     <TextView
         android:id="@+id/TextView07"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignLeft="@+id/TextView05"
         android:layout_below="@+id/TextView05"
         android:layout_marginTop="15dp"
         android:text="@string/Youcourierpos"
         android:textColor="@color/blue" />

     <TextView
         android:id="@+id/TextView08"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_above="@+id/TextView01"
         android:layout_alignLeft="@+id/TextView04"
         android:text="@string/Status"
         android:visibility="gone" />

     <TextView
         android:id="@+id/TextView09"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_above="@+id/TextView05"
         android:layout_alignLeft="@+id/TextView08"
         android:text="@string/Status"
         android:visibility="gone" />

     <TextView
         android:id="@+id/TextView10"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_above="@+id/TextView07"
         android:layout_alignLeft="@+id/TextView09"
         android:text="@string/Status"
         android:visibility="gone" />
     
</RelativeLayout>